--- a/multi-agent-chat-app/frontend/package.json
+++ b/multi-agent-chat-app/frontend/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "react-markdown": "^8.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
